--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "node --watch server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -13,9 +14,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/AyushDeuja/admin-api-express/issues"
   },
-  "homepage": "https://github.com/AyushDeuja/admin-api-express#readme"
+  "homepage": "https://github.com/AyushDeuja/admin-api-express#readme",
+  "dependencies": {
+    "express": "^5.2.1"
+  }
 }
